==> apache/nuttx/arch/arm/src/sam3u/sam_spi.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <semaphore.h>
#include <errno.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/arch.h>
#include <nuttx/spi.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "sam_gpio.h"
#include "sam_spi.h"
#include "chip/sam_pmc.h"
#include "chip/sam_spi.h"
#include "chip/sam_pinmap.h"
#  define spidbg lldbg
#    define spivdbg lldbg
#    define spivdbg(x...)
#  define spidbg(x...)
#  define spivdbg(x...)
# define spi_dumpregs(msg)

static uint32_t spi_setfrequency(FAR struct spi_dev_s *dev, uint32_t frequency)
{
  FAR struct sam_spidev_s *priv = (FAR struct sam_spidev_s *)dev;
  uint32_t actual;
  uint32_t scbr;
  uint32_t dlybs;
  uint32_t dlybct;
  uint32_t regval;
  uint32_t regaddr;

  spivdbg("cs=%d frequency=%d\n", priv->cs, frequency);
  DEBUGASSERT(priv->cs >= 0 && priv->cs <= 3);

  /* Check if the requested frequency is the same as the frequency selection */

#ifndef CONFIG_SPI_OWNBUS
  if (priv->csstate[priv->cs].frequency == frequency)
    {
      /* We are already at this frequency.  Return the actual. */

      return priv->csstate[priv->cs].actual;
    }
#endif

  /* Configure SPI to a frequency as close as possible to the requested frequency.
   *
   *   SPCK frequency = MCK / SCBR, or SCBR = MCK / frequency
   */

  scbr = SAM_MCK_FREQUENCY / frequency;

  if (scbr < 8)
    {
      scbr = 8;
    }
  else if (scbr > 254)
    {
      scbr = 254;
    }

  scbr = (scbr + 1) & ~1;

  /* Save the new scbr value */

  regaddr = g_csraddr[priv->cs];
  regval  = getreg32(regaddr);
  regval &= ~(SPI_CSR_SCBR_MASK|SPI_CSR_DLYBS_MASK|SPI_CSR_DLYBCT_MASK);
  regval |= scbr << SPI_CSR_SCBR_SHIFT;

  /* DLYBS: Delay Before SPCK.  This field defines the delay from NPCS valid to the
   * first valid SPCK transition. When DLYBS equals zero, the NPCS valid to SPCK
   * transition is 1/2 the SPCK clock period. Otherwise, the following equations
   * determine the delay:
   *
   *   Delay Before SPCK = DLYBS / MCK
   *
   * For a 2uS delay
   *
   *   DLYBS = MCK * 0.000002 = MCK / 500000
   */

  dlybs   = SAM_MCK_FREQUENCY / 500000;
  regval |= dlybs << SPI_CSR_DLYBS_SHIFT;

  /* DLYBCT: Delay Between Consecutive Transfers.  This field defines the delay
   * between two consecutive transfers with the same peripheral without removing
   * the chip select. The delay is always inserted after each transfer and
   * before removing the chip select if needed.
   *
   *  Delay Between Consecutive Transfers = (32 x DLYBCT) / MCK
   *
   * For a 5uS delay:
   *
   *  DLYBCT = MCK * 0.000005 / 32 = MCK / 200000 / 32
   */

  dlybct  = SAM_MCK_FREQUENCY / 200000 / 32;
  regval |= dlybct << SPI_CSR_DLYBCT_SHIFT;
  putreg32(regval, regaddr);

  /* Calculate the new actual frequency */

  actual = SAM_MCK_FREQUENCY / scbr;
  spivdbg("csr[%08x]=%08x actual=%d\n", regaddr, regval, actual);

  /* Save the frequency setting */

#ifndef CONFIG_SPI_OWNBUS
  priv->csstate[priv->cs].frequency = frequency;
  priv->csstate[priv->cs].actual    = actual;
#endif

  spidbg("Frequency %d->%d\n", frequency, actual);
  return actual;
}

static void spi_setmode(FAR struct spi_dev_s *dev, enum spi_mode_e mode)
{
  FAR struct sam_spidev_s *priv = (FAR struct sam_spidev_s *)dev;
  uint32_t regval;
  uint32_t regaddr;

  spivdbg("cs=%d mode=%d\n", priv->cs, mode);
  DEBUGASSERT(priv->cs >= 0 && priv->cs <= 3);

  /* Has the mode changed? */

#ifndef CONFIG_SPI_OWNBUS
  if (mode != priv->csstate[priv->cs].mode)
    {
#endif
      /* Yes... Set the mode appropriately */

      regaddr = g_csraddr[priv->cs];
      regval  = getreg32(regaddr);
      regval &= ~(SPI_CSR_CPOL|SPI_CSR_NCPHA);

      switch (mode)
        {
        case SPIDEV_MODE0: /* CPOL=0; NCPHA=0 */
          break;

        case SPIDEV_MODE1: /* CPOL=0; NCPHA=1 */
            regval |= SPI_CSR_NCPHA;
          break;

        case SPIDEV_MODE2: /* CPOL=1; NCPHA=0 */
            regval |= SPI_CSR_CPOL;
          break;

        case SPIDEV_MODE3: /* CPOL=1; NCPHA=1 */
          regval |= (SPI_CSR_CPOL|SPI_CSR_NCPHA);
          break;

        default:
          DEBUGASSERT(FALSE);
          return;
        }

      putreg32(regval, regaddr);
      spivdbg("csr[%08x]=%08x\n", regaddr, regval);

      /* Save the mode so that subsequent re-configurations will be faster */

#ifndef CONFIG_SPI_OWNBUS
      priv->csstate[priv->cs].mode = mode;
    }
#endif
}

static void spi_setbits(FAR struct spi_dev_s *dev, int nbits)
{
  FAR struct sam_spidev_s *priv = (FAR struct sam_spidev_s *)dev;
  uint32_t regaddr;
  uint32_t regval;

  spivdbg("cs=%d nbits=%d\n", priv->cs, nbits);
  DEBUGASSERT(priv && nbits > 7 && nbits < 17);
  DEBUGASSERT(priv->cs >= 0 && priv->cs <= 3);

  /* NOTE:  The logic in spi_send and in spi_exchange only handles 8-bit
   * data at the present time.  So the following extra assertion is a
   * reminder that we have to fix that someday.
   */

  DEBUGASSERT(nbits == 8); /* Temporary -- FIX ME */

  /* Has the number of bits changed? */

#ifndef CONFIG_SPI_OWNBUS
  if (nbits != priv->csstate[priv->cs].nbits)
    {
#endif
      /* Yes... Set number of bits appropriately */

      regaddr = g_csraddr[priv->cs];
      regval  = getreg32(regaddr);
      regval &= ~SPI_CSR_BITS_MASK;
      regval |= SPI_CSR_BITS(nbits);
      putreg32(regval, regaddr);

      spivdbg("csr[%08x]=%08x\n", regaddr, regval);

      /* Save the selection so the subsequence re-configurations will be faster */

#ifndef CONFIG_SPI_OWNBUS
      priv->csstate[priv->cs].nbits = nbits;
    }
#endif
}
